Failure of a website

--- a/Products.html
+++ b/Products.html
@@ -60,7 +60,7 @@
       <div class="container px-4 px-lg-5 my-5">
           <div class="text-center text-white">
               <h1 class="display-4 fw-bolder">Shop in style</h1>
-              <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+              <p class="lead fw-normal text-white-50 mb-0">Everyday utilities for everyday purposes!</p>
           </div>
       </div>
   </header>
@@ -72,19 +72,19 @@
                   <div class="card h-100">
                       <!-- Product image-->
                       <a href="productitem.html">
-                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                      <img class="card-img-top" src="vacum.webp" alt="Picture of a vacum" /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
                               <!-- Product name-->
-                              <h5 class="fw-bolder">Fancy Product</h5>
+                              <h5 class="fw-bolder">Vacum Kit</h5>
                               <!-- Product price-->
-                              $40.00 - $80.00
+                              $50.00
                           </div>
                       </div>
                       <!-- Product actions-->
                       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                          <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                       </div>
                   </div>
               </div>
@@ -96,12 +96,12 @@
                       <!-- Product image-->
                       <a href="productitem.html">
                         <img class="card-img-top"
-                         src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                         src="thermometer.jpg" alt="Picture of a thermometer" /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
                               <!-- Product name-->
-                              <h5 class="fw-bolder">Special Item</h5>
+                              <h5 class="fw-bolder">Thermometer</h5>
                               <!-- Product reviews-->
                               <div class="d-flex justify-content-center small text-warning mb-2">
                                   <div class="bi-star-fill"></div>
@@ -117,7 +117,7 @@
                       </div>
                       <!-- Product actions-->
                       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                          <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                       </div>
                   </div>
               </div>
@@ -127,20 +127,20 @@
                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                       <!-- Product image-->
                       <a href="productitem.html">
-                        <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                        <img class="card-img-top" src="containers.jpg" alt="Picture of a container" /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
                               <!-- Product name-->
-                              <h5 class="fw-bolder">Sale Item</h5>
+                              <h5 class="fw-bolder">Container</h5>
                               <!-- Product price-->
-                              <span class="text-muted text-decoration-line-through">$50.00</span>
-                              $25.00
+                              <span class="text-muted text-decoration-line-through">$30.00</span>
+                              $20.00
                           </div>
                       </div>
                       <!-- Product actions-->
                       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                          <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                       </div>
                   </div>
               </div>
@@ -148,12 +148,12 @@
                   <div class="card h-100">
                       <!-- Product image-->
                       <a href="productitem.html">
-                        <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                        <img class="card-img-top" src="towels.jpg" alt="Pictue of Towels" /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
                               <!-- Product name-->
-                              <h5 class="fw-bolder">Popular Item</h5>
+                              <h5 class="fw-bolder">Towels</h5>
                               <!-- Product reviews-->
                               <div class="d-flex justify-content-center small text-warning mb-2">
                                   <div class="bi-star-fill"></div>
@@ -163,12 +163,12 @@
                                   <div class="bi-star-fill"></div>
                               </div>
                               <!-- Product price-->
-                              $40.00
+                              $15.00
                           </div>
                       </div>
                       <!-- Product actions-->
                       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                          <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                       </div>
                   </div>
               </div>
@@ -178,19 +178,19 @@
                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                       <!-- Product image-->
                       <a href="productitem.html">
-                        <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                        <img class="card-img-top" src="boxers.jpg" alt="Image of hanes boxers" /></a>
                       <div class="card-body p-4">
                           <div class="text-center">
                               <!-- Product name-->
-                              <h5 class="fw-bolder">Sale Item</h5>
+                              <h5 class="fw-bolder">Boxers</h5>
                               <!-- Product price-->
-                              <span class="text-muted text-decoration-line-through">$50.00</span>
-                              $25.00
+                              <span class="text-muted text-decoration-line-through">$25.00</span>
+                              $20.00
                           </div>
                       </div>
                       <!-- Product actions-->
                       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                          <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                       </div>
                   </div>
               </div>
@@ -198,19 +198,19 @@
                   <div class="card h-100">
                       <!-- Product image-->
                       <a href="productitem.html">
-                        <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                        <img class="card-img-top" src="light.jpg" alt="Picuter of a lamp-post" /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
                               <!-- Product name-->
-                              <h5 class="fw-bolder">Fancy Product</h5>
+                              <h5 class="fw-bolder">Bright Lamp</h5>
                               <!-- Product price-->
-                              $120.00 - $280.00
+                              $120.00 - $80.00
                           </div>
                       </div>
                       <!-- Product actions-->
                       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                          <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                       </div>
                   </div>
               </div>
@@ -220,12 +220,12 @@
                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                       <!-- Product image-->
                       <a href="productitem.html">
-                        <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                        <img class="card-img-top" src="screen.jpg" alt="Picture of a screen protecter" /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
                               <!-- Product name-->
-                              <h5 class="fw-bolder">Special Item</h5>
+                              <h5 class="fw-bolder">IPhone Screen Protector</h5>
                               <!-- Product reviews-->
                               <div class="d-flex justify-content-center small text-warning mb-2">
                                   <div class="bi-star-fill"></div>
@@ -236,12 +236,12 @@
                               </div>
                               <!-- Product price-->
                               <span class="text-muted text-decoration-line-through">$20.00</span>
-                              $18.00
+                              $16.00
                           </div>
                       </div>
                       <!-- Product actions-->
                       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                          <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                       </div>
                   </div>
               </div>
@@ -249,12 +249,12 @@
                   <div class="card h-100">
                       <!-- Product image-->
                       <a href="productitem.html">
-                        <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
+                        <img class="card-img-top" src="headpohnes.jpg" alt="Picture of headphones" /></a>
                       <!-- Product details-->
                       <div class="card-body p-4">
                           <div class="text-center">
                               <!-- Product name-->
-                              <h5 class="fw-bolder">Popular Item</h5>
+                              <h5 class="fw-bolder">YBL Headphones</h5>
                               <!-- Product reviews-->
                               <div class="d-flex justify-content-center small text-warning mb-2">
                                   <div class="bi-star-fill"></div>
@@ -264,12 +264,12 @@
                                   <div class="bi-star-fill"></div>
                               </div>
                               <!-- Product price-->
-                              $40.00
+                              $30.00
                           </div>
                       </div>
                       <!-- Product actions-->
                       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                          <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="checkout.html">Add to cart</a></div>
                       </div>
                   </div>
               </div>
@@ -278,7 +278,7 @@
   </section>
   <!-- Footer-->
   <footer class="py-5 bg-dark">
-      <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+      <div class="container"><p class="m-0 text-center text-white">Copyright &copy; BackDoor-Club 2022</p></div>
   </footer>
 </body>
 
