--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="bd-placeholder-img" src="happygirl.jpeg" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></img>
+          <img class="bd-placeholder-img" src="backgorund.webp" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></img>
   
           <div class="container">
             <div class="carousel-caption text-start">
               <h1>Affordable Prices</h1>
               <p>At BackDoor-Club we get our prodcuts from trusted and cheap soruces and sell them for a good price.</p>
-              <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+              <p><a class="btn btn-lg btn-primary" href="checkout.html">Checkout Today!</a></p>
             </div>
           </div>
         </div>
@@ -83,21 +83,21 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>All in one place!</h1>
-              <p>Browse our enormous catalog of items. There is something for everying. We sell dropshipping items and everying
-                trending clothing
+              <p>Browse our enormous catalog of items. There is something for everyone. We sell dropshipping items and everything
+                trending clothing related.
               </p>
-              <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+              <p><a class="btn btn-lg btn-primary" href="Products.html">Browse Shop</a></p>
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="bd-placeholder-img" src="computer.jpeg" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></img>
+          <img class="bd-placeholder-img" src="Privacy-Policy-banner.webp" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></img>
   
           <div class="container">
             <div class="carousel-caption text-end">
               <h1>Trusted Website!</h1>
               <p>This is an ethical and trusted website. We WILL NOT scam you for your money.</p>
-              <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+              <p><a class="btn btn-lg btn-primary" href="Support.html">Support</a></p>
             </div>
           </div>
         </div>
@@ -122,24 +122,24 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+          <img class="bd-placeholder-img rounded-circle" src="whoarewe.jpg" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
   
-          <h2 class="fw-normal">Heading</h2>
-          <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+          <h2 class="fw-normal">Who are we?</h2>
+          <p>BackDoor-Club was founded by Wesley Ihezuo. A well known Full-Stack Developer</p>
           <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+          <img class="bd-placeholder-img rounded-circle" src="target.jpg" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
   
-          <h2 class="fw-normal">Heading</h2>
-          <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+          <h2 class="fw-normal">Our Aim</h2>
+          <p>We aim to sell high quailtiy clothes and items are a reasonable price. We are a profit organization.</p>
           <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+          <img class="bd-placeholder-img rounded-circle" src="history.webp" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
   
-          <h2 class="fw-normal">Heading</h2>
-          <p>And lastly this, the third column of representative placeholder content.</p>
+          <h2 class="fw-normal">History</h2>
+          <p>Wesley was always motivated in making money. So he decided to make a dropshipping website.</p>
           <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
@@ -151,8 +151,8 @@
   
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-          <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+          <h2 class="featurette-heading fw-normal lh-1">Best selling Kitchen & Dining <span class="text-muted">The prefect blender.</span></h2>
+          <p class="lead">Big blender performance, compact size. BlendJet was created to make blending simple and delicious at home or on the go. This amazing portable blender is lightweight, high-powered and handheld, perfect for the gym, your daily commute, dorm room, office or kitchen.</p>
         </div>
         <div class="col-md-5">
           <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="BLENDER.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></img>
@@ -164,8 +164,8 @@
   
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+          <h2 class="featurette-heading fw-normal lh-1">Best selling workout equipment. <span class="text-muted">Refreshing and cool</span></h2>
+          <p class="lead">The Iron Flask 18 oz Wide Mouth Water Bottle With Spout Lid is the perfect sized bottle for your fav beverage, in other words, its cup holder-friendly. Its double-wall vacuum-insulated design ensures your hot beverages stay hot for 12 hours and your cold beverages stay cold for 24 hours with no bottle sweat. </p>
         </div>
         <div class="col-md-5 order-md-1">
 
@@ -177,11 +177,11 @@
   
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+          <h2 class="featurette-heading fw-normal lh-1">Best selling Electronic. <span class="text-muted">Get it while it last</span></h2>
+          <p class="lead">Delivering rich, outsize sound in a compact package, the waterproof JBL Clip 4 speaker features an integrated carabiner for clipping to your belt or bag for easy portability.</p>
         </div>
         <div class="col-md-5">
-          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="bluetooth.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></svg>
+          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="jbl.jpg" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></svg>
   
         </div>
       </div>
@@ -196,7 +196,7 @@
     <!-- FOOTER -->
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
-      <p>&copy; 2017–2022 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <p>&copy; 2017–2022 BackDoor-Club, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
   </main>
   
